--- a/Project2/css/style.css
+++ b/Project2/css/style.css
@@ -32,7 +32,9 @@ nav{
 
 }
 
-
+h1{
+    text-align: center;
+}
 
 h2{ 
     text-align: center;
@@ -65,7 +67,12 @@ main img{
     border-radius: 10px;
 }
 
- 
+ img{
+     width:40%;
+     display: block;
+     margin: 20px auto;
+
+ }
 
 footer{
     background-color:#a87373 ;
