--- a/Project2/css/style.css
+++ b/Project2/css/style.css
@@ -24,32 +24,94 @@ header img{
 
 nav{
     background-color:#a87373;
-    margin: auto;
     text-align: center ;
-    padding: 3px;
-    font-family: Playfair Display;
-    word-spacing: 30px;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
 
+nav a{
+    display:inline-block;
+    background-color: #a87373;
+    font-size: 3m;
+    font-weight: bold;
+    color:white;
+    height: auto;
+    width:90px;
+    text-decoration: none;
+    font-family: 'Times New Roman', Times, serif; 
+    border-radius: 10px;
+}
+
+nav a:hover{
+    background-color: #D9ABA0;
 }
 
 h1{
     text-align: center;
+    color:white;
+    font-family: 'Times New Roman';
 }
 
 h2{ 
     text-align: center;
+    color:white;
+    font-family: 'Times New Roman';
+    font-size: 40px;
+}
 
-    
-}
-h4{
-    text-align: left;
-    padding-left: 17%;
-    padding-top: 1%;
-    padding-bottom: 1%;
-}
+
 p{
     text-align: center;
-
+    font-family: 'Times New Roman', Times, serif;
+}
+a.sm{
+    display:inline-block;
+    background-color: #4267B2;
+    border-radius: 50%;
+    font-size: 3mm;
+    color:white;
+    text-decoration: none;
+    font-family: 'Times New Roman', Times, serif;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 3%;
+    padding-left: 3%;
+}
+a.sm1{
+    display:inline-block;
+    background-color: #bc2a8d;
+    border-radius: 50%;
+    font-size: 3m;
+    color:white;
+    text-decoration: none;
+    font-family: 'Times New Roman', Times, serif;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 3%;
+    padding-left: 3%;
+}
+a.sm2{
+    display:inline-block;
+    background-color: #34B7F1;
+    border-radius: 50%;
+    font-size: 3m;
+    color:white;
+    text-decoration: none;
+    font-family: 'Times New Roman', Times, serif;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 3%;
+    padding-left: 3%;
+}
+a.sm:hover{
+    background-color: black;
+    
+}
+a.sm1:hover{
+    background-color: black;
+}
+a.sm2:hover{
+    background-color: black;
 }
 
 main{
@@ -57,7 +119,7 @@ main{
 margin: 20px auto;
 width: 800px;
 padding:20px;
-border: 4px solid #cf8f95;
+
 }
 
 main img{ 
@@ -65,18 +127,16 @@ main img{
     display: block;
     margin: 20px auto;
     border-radius: 10px;
+    max-width: 100%;
+    min-width: none;
 }
 
- img{
-     width:40%;
-     display: block;
-     margin: 20px auto;
-
- }
-
-footer{
-    background-color:#a87373 ;
-    border-radius: 0 0 5px 5px;
-    text-align: center;
-    padding:10px;
+ img.facebook{
+    width:80% auto;
 }
+     footer{
+        background-color:#a87373 ;
+        border-radius: 0 0 5px 5px;
+        text-align: center;
+        padding:20px;
+    }
