--- a/Project2/css/style.css
+++ b/Project2/css/style.css
@@ -3,11 +3,11 @@ body{
 }
 
 #container{
-    width: 1000px;
+    width: 100%;
     background-color:#D9ABA0;
     margin: 20px auto;
     border: 4px solid #a87373;
-    border-radius: 10px;
+    border-radius: 1%;
 }
 
 header{
@@ -16,7 +16,7 @@ header{
 }
 
 header img{
-    width: 200px;
+    width: 18%;
     display:block;
     margin: 0px auto;
     padding: 0px;
@@ -32,14 +32,14 @@ nav{
 nav a{
     display:inline-block;
     background-color: #a87373;
-    font-size: 3m;
+    font-size: 1.5vw;
     font-weight: bold;
     color:white;
     height: auto;
-    width:90px;
+    width: 8%;
     text-decoration: none;
     font-family: 'Times New Roman', Times, serif; 
-    border-radius: 10px;
+    border-radius: 10%;
 }
 
 nav a:hover{
@@ -50,6 +50,7 @@ h1{
     text-align: center;
     color:white;
     font-family: 'Times New Roman';
+    padding-top: 2%;
 }
 
 h2{ 
@@ -57,6 +58,11 @@ h2{
     color:white;
     font-family: 'Times New Roman';
     font-size: 40px;
+}
+h3{
+    text-align: center;
+    color:white;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 
@@ -68,7 +74,7 @@ a.sm{
     display:inline-block;
     background-color: #4267B2;
     border-radius: 50%;
-    font-size: 3mm;
+    font-size: 4mm;
     color:white;
     text-decoration: none;
     font-family: 'Times New Roman', Times, serif;
@@ -117,13 +123,13 @@ a.sm2:hover{
 main{
     background-color: #D9ABA0;
 margin: 20px auto;
-width: 800px;
+width: 90%;
 padding:20px;
 
 }
 
 main img{ 
-    width:35%;
+    width: 100%;
     display: block;
     margin: 20px auto;
     border-radius: 10px;
@@ -131,8 +137,13 @@ main img{
     min-width: none;
 }
 
+
  img.facebook{
-    width:80% auto;
+    width: 60%;
+
+}
+img.flower{
+    width:100%;
 }
      footer{
         background-color:#a87373 ;
@@ -140,3 +151,52 @@ main img{
         text-align: center;
         padding:20px;
     }
+
+
+    .block {
+        display: flex;
+        padding-top:2%;
+        Padding-bottom:5%; 
+        justify-content: center;
+        width:100%;
+    }
+
+    .column {
+        padding-Left:5%;
+        padding-right:3%;
+        Padding-bottom:3%; 
+        justify-content: space-between;
+        width: 33.3%; 
+    }
+
+     
+    .row {
+        display: flex;
+        width:100%;
+        justify-content:center;
+        padding-bottom:2%;
+        Padding-top:2%;
+      }
+      
+      .column {
+        width: 30%;
+        padding: 2px;
+        justify-content: space-between;
+        font-size: 5mm;
+        padding-left: 2%;
+        padding-right: 2%;
+
+      }
+      .smrow {
+        display: flex;
+        width:100%;
+        justify-content:center;
+        padding-bottom:3%;
+        Padding-top:2%;
+      }
+      
+      .simplemakeup {
+        width: 100%;
+        
+
+      }
