--- a/Project2/css/style.css
+++ b/Project2/css/style.css
@@ -1,25 +1,25 @@
 body{
     background-color: #D9D9D9;
+    font-size: 17px; 
 }
+
+/* mobile styles */
 
 #container{
     width: 100%;
     background-color:#D9ABA0;
-    margin: 20px auto;
-    border: 4px solid #a87373;
-    border-radius: 1%;
+    border: 2px solid #a87373;
+
 }
 
 header{
     background-color:#a87373 ;
-    border-radius: 5px 5px 0 0;
 }
 
 header img{
-    width: 18%;
+    width: 45%;
     display:block;
     margin: 0px auto;
-    padding: 0px;
 }
 
 nav{
@@ -27,19 +27,19 @@ nav{
     text-align: center ;
     padding-top: 2%;
     padding-bottom: 2%;
+    width: 100%;
 }
 
 nav a{
     display:inline-block;
     background-color: #a87373;
-    font-size: 1.5vw;
+    font-size: .9em;
     font-weight: bold;
     color:white;
     height: auto;
-    width: 8%;
+    width: 20%;
     text-decoration: none;
     font-family: 'Times New Roman', Times, serif; 
-    border-radius: 10%;
 }
 
 nav a:hover{
@@ -64,17 +64,24 @@ h3{
     color:white;
     font-family: 'Times New Roman', Times, serif;
 }
-
-
 p{
     text-align: center;
+    font-size: 1.3em;
+    padding-left: 3%;
+    padding-right: 3%;
     font-family: 'Times New Roman', Times, serif;
 }
-a.sm{
+.artbiotext{
+    font-size: 1.2em;
+    padding-left: 4%;
+    padding-right: 4%;
+}
+
+a.fb{
     display:inline-block;
-    background-color: #4267B2;
+    background-color: #F2B84B;
     border-radius: 50%;
-    font-size: 4mm;
+    font-size: 1em;
     color:white;
     text-decoration: none;
     font-family: 'Times New Roman', Times, serif;
@@ -83,11 +90,11 @@ a.sm{
     padding-right: 3%;
     padding-left: 3%;
 }
-a.sm1{
+a.insta{
     display:inline-block;
-    background-color: #bc2a8d;
+    background-color: #F2B84B;
     border-radius: 50%;
-    font-size: 3mm;
+    font-size: 1em;
     color:white;
     text-decoration: none;
     font-family: 'Times New Roman', Times, serif;
@@ -96,11 +103,11 @@ a.sm1{
     padding-right: 3%;
     padding-left: 3%;
 }
-a.sm2{
+a.what{
     display:inline-block;
-    background-color: #34B7F1;
+    background-color:#F2B84B;
     border-radius: 50%;
-    font-size: 3mm;
+    font-size: 1em;
     color:white;
     text-decoration: none;
     font-family: 'Times New Roman', Times, serif;
@@ -109,23 +116,21 @@ a.sm2{
     padding-right: 3%;
     padding-left: 3%;
 }
-a.sm:hover{
+a.fb:hover{
     background-color: black;
     
 }
-a.sm1:hover{
+a.insta:hover{
     background-color: black;
 }
-a.sm2:hover{
+a.what:hover{
     background-color: black;
 }
 
 main{
     background-color: #D9ABA0;
-margin: 20px auto;
-width: 90%;
-padding:20px;
-
+margin: 0 auto;
+width: 100%;
 }
 
 main img{ 
@@ -138,11 +143,12 @@ main img{
 
 
  img.facebook{
-    width: 60%;
+    width: 90%;
 
 }
 img.flower{
     width:100%;
+    border-radius: 0%;
 }
      footer{
         background-color:#a87373 ;
@@ -152,20 +158,17 @@ img.flower{
     }
 
 
-    .block {
+    .flex{
         display: flex;
-        padding-top:2%;
+        padding-top:1%;
         Padding-bottom:5%; 
         justify-content: center;
         width:100%;
     }
 
-    .column {
-        padding-Left:5%;
-        padding-right:3%;
-        Padding-bottom:3%; 
-        justify-content: space-between;
-        width: 33.3%; 
+    .col {
+        padding: 20px;
+        margin:20px
     }
 
      
@@ -184,7 +187,12 @@ img.flower{
         font-size: 5mm;
         padding-left: 2%;
         padding-right: 2%;
-
+      }
+      .udpic{
+        width:100%;
+      }
+      .selfportrait{
+          width: 87%;
       }
       .smrow {
         display: flex;
@@ -194,8 +202,420 @@ img.flower{
         Padding-top:2%;
       }
       
-      .simplemakeup {
-        width: 100%;
+    
+      .spencerleft{
+          width:90%
+      }
+      .spencerright{
+          width:90%; 
+      }
+      .bridesmaid1{
+          width:95%;
+      }
+    
+      .piclinks{
+          width: 85%;
+          padding-top: 3%;
+          padding-bottom: 5%;
+      }
+
+      @media(min-width:768px) {
+        #container{
+            width: 100%;
+            background-color:#D9ABA0;
+            margin: 20px auto;
+            border: 4px solid #a87373;
+            border-radius: 1%;
+        }
         
+        header{
+            background-color:#a87373 ;
+            border-radius: 5px 5px 0 0;
+          
+        }
+        
+        header img{
+            width: 45%;
+            display:block;
+            margin: 0px auto;
+        }
+        
+        nav{
+            background-color:#a87373;
+            text-align: center ;
+            padding-top: 2%;
+            padding-bottom: 2%;
+            width: 100%;
+        }
+        
+        nav a{
+            display:inline-block;
+            background-color: #a87373;
+            font-size: 1.5em;
+            font-weight: bold;
+            color:white;
+            height: auto;
+            width: 18%;
+            text-decoration: none;
+            font-family: 'Times New Roman', Times, serif; 
+            border-radius: 10%;
+        }
+        
+        nav a:hover{
+            background-color: #D9ABA0;
+        }
+        
+        h1{
+            text-align: center;
+            color:white;
+            font-family: 'Times New Roman';
+            padding-top: 2%;
+        }
+        
+        h2{ 
+            text-align: center;
+            color:white;
+            font-family: 'Times New Roman';
+            font-size: 40px;
+        }
+        h3{
+            text-align: center;
+            color:white;
+            font-family: 'Times New Roman', Times, serif;
+        }
+        p{
+            font-size: 1.3em;
+            text-align: center;
+            font-family: 'Times New Roman', Times, serif;
+            padding-left: 4%;
+            padding-right: 4%;
+        }
+        a.sm{
+            display:inline-block;
+            background-color: #4267B2;
+            border-radius: 50%;
+            font-size: 4mm;
+            color:white;
+            text-decoration: none;
+            font-family: 'Times New Roman', Times, serif;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            padding-right: 3%;
+            padding-left: 3%;
+        }
+        a.sm1{
+            display:inline-block;
+            background-color: #bc2a8d;
+            border-radius: 50%;
+            font-size: 3mm;
+            color:white;
+            text-decoration: none;
+            font-family: 'Times New Roman', Times, serif;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            padding-right: 3%;
+            padding-left: 3%;
+        }
+        a.sm2{
+            display:inline-block;
+            background-color: #34B7F1;
+            border-radius: 50%;
+            font-size: 3mm;
+            color:white;
+            text-decoration: none;
+            font-family: 'Times New Roman', Times, serif;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            padding-right: 3%;
+            padding-left: 3%;
+        }
+        a.sm:hover{
+            background-color: black;
+            
+        }
+        a.sm1:hover{
+            background-color: black;
+        }
+        a.sm2:hover{
+            background-color: black;
+        }
+        
+        main{
+            background-color: #D9ABA0;
+        margin: 0 auto;
+        width: 100%;
+        }
+        
+        main img{ 
+            width: 100%;
+            display: block;
+            margin: 20px auto;
+            border-radius: 10px;
+            max-width: 100%;
+        }
+        
+        
+         img.facebook{
+            width: 90%;
+        
+        }
+        img.flower{
+            width:100%;
+        }
+             footer{
+                background-color:#a87373 ;
+                border-radius: 0 0 5px 5px;
+                text-align: center;
+                padding:20px;
+            }
+        
+        
+            .flex{
+                display: flex;
+                padding-top:2%;
+                Padding-bottom:5%; 
+                justify-content: center;
+                width:100%;
+            }
+        
+            .col {
+                padding-Left:5%;
+                padding-right:3%;
+                Padding-bottom:3%; 
+                justify-content: space-between;
+                width: 33.3%; 
+            }
+        
+             
+            .row {
+                display: flex;
+                width:100%;
+                justify-content:center;
+                padding-bottom:2%;
+                Padding-top:2%;
+              }
+              
+              .column {
+                width: 30%;
+                padding: 2px;
+                justify-content: space-between;
+                font-size: 5mm;
+                padding-left: 2%;
+                padding-right: 2%;
+        
+              }
+              .smrow {
+                display: flex;
+                width:100%;
+                justify-content:center;
+                padding-bottom:3%;
+                Padding-top:2%;
+              }
+              
+              .simplemakeup {
+                width: 100%;
+                
+        
+              }
+
+      }
+
+      @media(min-width: 1024px){
+        #container{
+            width: 100%;
+            background-color:#D9ABA0;
+            margin: 20px auto;
+            border: 4px solid #a87373;
+            border-radius: 1%;
+        }
+        
+        header{
+            background-color:#a87373 ;
+            border-radius: 5px 5px 0 0;
+          
+        }
+        
+        header img{
+            width: 20%;
+            display:block;
+            margin: 0px auto;
+        }
+        
+        nav{
+            background-color:#a87373;
+            text-align: center ;
+            padding-top: 2%;
+            padding-bottom: 2%;
+            width: 100%;
+        }
+        
+        nav a{
+            display:inline-block;
+            background-color: #a87373;
+            font-size: 1.5em;
+            font-weight: bold;
+            color:white;
+            height: auto;
+            width: 13%;
+            text-decoration: none;
+            font-family: 'Times New Roman', Times, serif; 
+           
+        }
+        
+        nav a:hover{
+            background-color: #D9ABA0;
+        }
+        
+        h1{
+            text-align: center;
+            color:white;
+            font-family: 'Times New Roman';
+            padding-top: 2%;
+        }
+        
+        h2{ 
+            text-align: center;
+            color:white;
+            font-family: 'Times New Roman';
+            font-size: 40px;
+        }
+        h3{
+            text-align: center;
+            color:white;
+            font-family: 'Times New Roman', Times, serif;
+        }
+        p{
+            font-size: 1.5em;
+            text-align: center;
+            font-family: 'Times New Roman', Times, serif;
+            padding: 3px;
+        }
+        a.sm{
+            display:inline-block;
+            background-color: #4267B2;
+            border-radius: 50%;
+            font-size: 4mm;
+            color:white;
+            text-decoration: none;
+            font-family: 'Times New Roman', Times, serif;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            padding-right: 3%;
+            padding-left: 3%;
+        }
+        a.sm1{
+            display:inline-block;
+            background-color: #bc2a8d;
+            border-radius: 50%;
+            font-size: 3mm;
+            color:white;
+            text-decoration: none;
+            font-family: 'Times New Roman', Times, serif;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            padding-right: 3%;
+            padding-left: 3%;
+        }
+        a.sm2{
+            display:inline-block;
+            background-color: #34B7F1;
+            border-radius: 50%;
+            font-size: 3mm;
+            color:white;
+            text-decoration: none;
+            font-family: 'Times New Roman', Times, serif;
+            padding-top: 10px;
+            padding-bottom: 10px;
+            padding-right: 3%;
+            padding-left: 3%;
+        }
+        a.sm:hover{
+            background-color: black;
+            
+        }
+        a.sm1:hover{
+            background-color: black;
+        }
+        a.sm2:hover{
+            background-color: black;
+        }
+        
+        main{
+            background-color: #D9ABA0;
+        margin: 0 auto;
+        width: 100%;
+        }
+        
+        main img{ 
+            width: 100%;
+            display: block;
+            margin: 20px auto;
+            border-radius: 10px;
+            max-width: 100%;
+        }
+        
+        
+         img.facebook{
+            width: 60%;
+        
+        }
+        img.flower{
+            width:100%;
+        }
+             footer{
+                background-color:#a87373 ;
+                border-radius: 0 0 5px 5px;
+                text-align: center;
+                padding:20px;
+            }
+        
+        
+            .flex{
+                display: flex;
+                padding-top:2%;
+                Padding-bottom:5%; 
+                justify-content: center;
+                width:100%;
+            }
+        
+            .col {
+                padding-Left:5%;
+                padding-right:3%;
+                Padding-bottom:3%; 
+                justify-content: space-between;
+                width: 33.3%; 
+            }
+        
+             
+            .row {
+                display: flex;
+                width:100%;
+                justify-content:center;
+                padding-bottom:2%;
+                Padding-top:2%;
+              }
+              
+              .column {
+                width: 30%;
+                padding: 2px;
+                justify-content: space-between;
+                font-size: 5mm;
+                padding-left: 2%;
+                padding-right: 2%;
+        
+              }
+              .smrow {
+                display: flex;
+                width:100%;
+                justify-content:center;
+                padding-bottom:3%;
+                Padding-top:2%;
+              }
+              
+              .simplemakeup {
+                width: 100%;
+                
+        
+              }
 
       }
