--- a/Final/CSS/style.css
+++ b/Final/CSS/style.css
@@ -63,7 +63,7 @@ h1{
 }
 h3{
     color: orange;
-    font-family:superior-title,serif;
+    font-family:'Times New Roman', Times, serif;
     text-align: center;
 }
 img.porch{
@@ -73,7 +73,7 @@ img.porch{
 p{
     color: grey;
     text-align: center;
-    font-family: superior-title,serif;
+    font-family: 'Times New Roman', Times, serif;
     font-weight: 400;
     font-style: normal;
     padding:3%;
@@ -108,7 +108,7 @@ a.Museum{
     margin:20px;
 }
 table{
-    font-family:superior-title,serif;
+    font-family:'Times New Roman', Times, serif;
     margin-left: auto;
     margin-right: auto;
     width: 100%;
@@ -166,7 +166,7 @@ footer{
         }
         h3{
             color: orange;
-            font-family:superior-title,serif;
+            font-family:'Times New Roman', Times, serif;
             text-align: center;
             font-size: 2em;
         }
@@ -177,7 +177,7 @@ footer{
         p{
             color: grey;
             text-align: center;
-            font-family: superior-title,serif;
+            font-family: 'Times New Roman', Times, serif;
             font-weight: 400;
             font-size: 1.5em;
             font-style: normal;
@@ -213,7 +213,7 @@ footer{
             margin:20px;
         }
         table{
-            font-family:superior-title,serif;
+            font-family:'Times New Roman', Times, serif;
             margin-left: auto;
             margin-right: auto;
             width: 100%;
@@ -290,7 +290,7 @@ footer{
     }
     h3{
         color: orange;
-        font-family:superior-title,serif;
+        font-family:'Times New Roman', Times, serif;
         text-align: center;
     }
     img.porch{
@@ -300,7 +300,7 @@ footer{
     p{
         color: grey;
         text-align: center;
-        font-family: superior-title,serif;
+        font-family: 'Times New Roman', Times, serif;
         font-weight: 400;
         font-size: 2em;
         font-style: normal;
@@ -341,7 +341,7 @@ footer{
         width:40%;
     }
     table{
-        font-family:superior-title,serif;
+        font-family:'Times New Roman', Times, serif;
         margin-left: auto;
         margin-right: auto;
         width: 100%;
